<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myRoll"
        android:textSize="30sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        />

    <Button
        android:id="@+id/RelativeLayoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relativeLayoutButton"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/ConstraintLayoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraintLayoutButton"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>


</LinearLayout>