<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RealtiveLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4682b4"
        android:text="Sign Up"
        android:textColor="#fffafa"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4682b4"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="@+id/textView"
        >


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userEmail"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userpassword"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:background="#4682b4"
        android:orientation="vertical"
        android:id="@+id/layout2">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGender">



        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textColor="#fffafa"
            android:text="Male" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Female"
            android:layout_marginTop="15dp"
            android:textColor="#fffafa"
            />

        </RadioGroup>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="375dp"
        android:background="#4682b4"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        android:textSize="18sp"
        android:text="@string/checkBoxString"
        android:textColor="#ffff"/>




    <Button

        android:layout_marginTop="430dp"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:textSize="24sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#4682b4"
        android:textColor="#fffafa"
        />



</RelativeLayout>