<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ced1"
    tools:context=".ConstraintLayout">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="557dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="100dp"
        android:background="#4682b4"
        android:text="Sign Up"
        android:textColor="#fffafa"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="491dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="9dp"
        android:background="#4682b4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.028"
        />



          <!--app:srcCompat="@drawable/fb"-->


<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="28dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="9dp"
    android:background="#4682b4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/imageView"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    />

   <!-- app:srcCompat="@drawable/google" -->
<!--
<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="449dp"
    android:layout_marginRight="174dp"
    android:layout_marginLeft="164dp"
    android:layout_marginTop="23dp"
    android:background="#4682b4"
    android:text="Or With"
    android:textSize="25dp"
    android:textColor="#fffafa"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.666"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.0" />

    -->

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4682b4"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:id="@+id/layout1"

    app:layout_constraintTop_toBottomOf="@+id/textView"

    >


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userEmail"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
         />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userpassword"
        android:textSize="26sp"
        android:layout_marginTop="10dp"/>


</LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/layout1"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:background="#4682b4"
    android:orientation="vertical"
    android:id="@+id/layout2">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radioGender">



    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="25sp"
        android:textColor="#fffafa"
        android:text="Male" />


    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="25sp"
        android:layout_marginRight="10dp"
        android:text="Female"
        android:textColor="#fffafa"
        />

    </RadioGroup>




</LinearLayout>


<CheckBox
    android:id="@+id/checkBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="#4682b4"
    app:layout_constraintTop_toBottomOf="@+id/layout2"
    android:textSize="18sp"
    android:text="Are you Agree with Term and Conditions"
    android:textColor="#ffff"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    />

<Button
    app:layout_constraintTop_toBottomOf="@+id/checkBox"
    app:layout_constraintEnd_toEndOf="@+id/layout2"
    android:layout_marginTop="10dp"
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/btnRegister"
    android:background="#4682b4"
    android:textColor="#fffafa"
     />


</android.support.constraint.ConstraintLayout>